--- a/HomePage/yjkim/3_work.css
+++ b/HomePage/yjkim/3_work.css
@@ -2,7 +2,9 @@
 body{
 	background-color: #56E37B;
 	position: relative;
+	text-align: center;
 }
+
 h1 {
 	text-align: center;
 	color:#86FFA6;
@@ -10,14 +12,22 @@ h1 {
 	margin-top: 140px;
 	margin-bottom: 120px;
 }
+
+#cards {
+	display: inline-block;
+	text-align: left;
+}
+
 .card {
 	position: relative;
-	float: left;
 	width: 400px;
 	height: 300px;
-	margin: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 40px;
 	background-color: #ffffff;
 	border-radius:10px;
+	display: inline-block;
 }
 
 .card > * {
@@ -32,21 +42,12 @@ h1 {
 	font-size: 20px;
 }
 
+.card > a {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
 .contents {
 	border-radius: 10px 10px 00px 00px;
-}
-
-.thumb_1 {
-	background-image: url("file:///C:/Users/yunjin/Documents/GitHub/JJProject/HomePage/yjkim/pic_1.png");
-	background-size: cover;
-}
-
-.thumb_2 {
-	background-image: url("file:///C:/Users/yunjin/Documents/GitHub/JJProject/HomePage/yjkim/pic_2.png");
-	background-size: cover;
-}
-
-.thumb_3 {
-	background-image: url("file:///C:/Users/yunjin/Documents/GitHub/JJProject/HomePage/yjkim/pic_3.jpg");
-	background-size: cover;
 }
